--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -39,13 +39,13 @@
 .list-group-item {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     background-color: #f8f9fa;
     color: #333;
     transition: all 0.3s ease;
     padding: 10px 20px;
-    border: none;
-    font-size: 1rem;
+    border: #6c757d;
+    font-size: 1.2rem;
     font-weight: 500;
     text-decoration: none;
 }
