--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -16,7 +16,7 @@
     text-align: center;
     background: #9EDF9C;
     width: 300px;
-    height: 140px;
+    height: 160px;
     position: absolute;
     right: 4%;
     top: 43%;
@@ -27,7 +27,7 @@
 
 #date {
     font-size: 1.5rem;
-    color: #555;
+    color: #222;
     margin-bottom: 10px;
 }
 
@@ -202,8 +202,8 @@
     width: 300px;
     height: 250px;
     position: absolute;
-    right: 0%;
-    top: 0%;
-    box-shadow: 10px 10px 10px 10px;
+    right: 0;
+    top: 0;
+    box-shadow: 10px 10px 10px ;
     border-radius: 30px;
 }
